--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "leaflet": "^0.7.7",
     "leaflet-ajax": "^2.0.0",
     "leaflet-geojson-selector": "^0.2.2",
+    "leaflet-geometryutil": "^0.4.0",
     "leaflet-providers": "^1.1.7",
     "leaflet-search": "^1.8.4",
     "proj4": "^2.3.14",
