--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leaflet-ajax": "^2.0.0",
     "leaflet-geojson-selector": "^0.2.2",
     "leaflet-geometryutil": "^0.4.0",
+    "leaflet-path-transform": "0.0.2",
     "leaflet-providers": "^1.1.7",
     "leaflet-search": "^1.8.4",
     "proj4": "^2.3.14",
